BT 30.09.2012 Added add item functionality

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -11,6 +11,18 @@
     <url-pattern>/api/v2/login</url-pattern>
   </servlet-mapping>
   
+  
+  
+  <servlet>
+    <servlet-name>add</servlet-name>
+    <servlet-class>com.appspot.deedleit.server.api.Add</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>add</servlet-name>
+    <url-pattern>/api/v2/add</url-pattern>
+  </servlet-mapping>
+  
   <servlet>
     <servlet-name>greetServlet</servlet-name>
     <servlet-class>com.appspot.deedleit.server.GreetingServiceImpl</servlet-class>
