--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -34,7 +34,7 @@
     <url-pattern>/api/v2/like</url-pattern>
   </servlet-mapping>
   
-    <servlet>
+  <servlet>
     <servlet-name>follow</servlet-name>
     <servlet-class>com.appspot.deedleit.server.api.Follow</servlet-class>
   </servlet>
@@ -42,6 +42,16 @@
   <servlet-mapping>
     <servlet-name>follow</servlet-name>
     <url-pattern>/api/v2/follow</url-pattern>
+  </servlet-mapping>
+  
+    <servlet>
+    <servlet-name>comment</servlet-name>
+    <servlet-class>com.appspot.deedleit.server.api.Comment</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>comment</servlet-name>
+    <url-pattern>/api/v2/comment</url-pattern>
   </servlet-mapping>
   
   <servlet>
