--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -60,9 +60,21 @@
   </servlet>
   
   <servlet-mapping>
+    <servlet-name>timelineClientSide</servlet-name>
+    <url-pattern>/api/v2/timelineClientSide</url-pattern>
+  </servlet-mapping>
+
+
+  <servlet>
+    <servlet-name>timelineClientSide</servlet-name>
+    <servlet-class>com.appspot.deedleit.server.api.TimelineClientSide</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
     <servlet-name>timeline</servlet-name>
     <url-pattern>/api/v2/timeline</url-pattern>
   </servlet-mapping>
+
   
   <servlet>
     <servlet-name>greetServlet</servlet-name>
